# cmake-at-a-glance

./: README.md
HelloCMake/: CMakeLists.txt  README.md
HelloCMake/src/: main.c
HelloCMake/src/include/: hellocmake.h
HelloCMake/src/lib/: hellocmake.c
